--- a/config.json
+++ b/config.json
@@ -20,11 +20,11 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "FACEBOOK_ADMIN": "",
-    "BOTNAME": "نـازي سـان",
+    "BOTNAME": "اوتشيها يعم",
     "PREFIX": ".",
     "ADMINBOT": [
         "61553754531086",
-        "",
+        "100090544069481",
         ""
     ],
     "NDH": [
