--- a/config.json
+++ b/config.json
@@ -21,7 +21,7 @@
     "OTPKEY": "",
     "FACEBOOK_ADMIN": "",
     "BOTNAME": "اوتشيها يعم",
-    "PREFIX": ".",
+    "PREFIX": "/",
     "ADMINBOT": [
         "61553754531086",
         "100090544069481",
